# textgrad-rl

./: .gitignore  BROAD_50_BENCHMARK_RESULTS.md  COMPILED_RESULTS_BY_BENCHMARK_POLICY_MODEL.csv  COMPILED_RESULTS_BY_BENCHMARK_POLICY_MODEL.md  EXPANDED_TEXTARENA_RESULTS.md  EXPERIMENTAL_RESULTS.md  EXTERNAL_TRANSFER_PROTOCOL_RESULTS.md  GPT_OSS_20B_SLM_RESULTS.md  MAIN_CONFERENCE_EXTENSION_PLAN.md  MINIWOB_BROWSERGYM_RESULTS.md  Makefile  OFFICIAL_LEADERBOARD_EXECUTION.md  OFFICIAL_LEADERBOARD_PREFLIGHT_RESULTS.md  PAPER_READINESS.md  PREREGISTERED_TEXTWORLD_EXPERIMENT.md  QWEN25_7B_TEXTGAME_REPORT.md  README.md  REALM_MULTISEED_CONFIDENCE_INTERVALS.md  REALM_SUCCESS_EFFICIENCY_EVIDENCE.md  RULEPI_PAPER_EVIDENCE.md  SLM_CANDIDATE_POOL_EXTENSION_RESULTS.md  TEXTGRAD_PLUS_RESULTS.md  TEXTGRAD_POLICY_ITERATION_RESULTS.md  TEXTGRAD_PPO_COMPARISON_RESULTS.md  TEXTGRAD_PPO_RESULTS.md  TEXTGRAD_PPO_SLM_T07_5SEED_RESULTS.md  TEXTGRAD_PPO_SLM_T07_RESULTS.md  TEXTGRAD_RL_PPO_ABLATION_RESULTS.md  TEXTWORLD24_QWEN25_7B_FULL80_REPORT.md  TEXTWORLD_24_RESULTS.md  TEXTWORLD_EXPRESS_RESULTS.md  WEBARENA_SECOND_BENCHMARK_STATUS.md  WORKSHOP_LOCAL_EXPERIMENTS.md  pyproject.toml
configs/: ablation_fixed_prompt.json  ablation_modular_textgrad.json  ablation_no_acceptance_gate.json  ablation_scalar_prompt_search.json  local_slm_actor.json  mac_demo.json  mac_full.json
examples/: inspect_run.py
paper/: README.md  realm_emnlp_textgrad_rl_draft.tex  references.bib
scripts/: build_qwen7b_textgame_report.py  build_realm_multiseed_report.py  build_realm_success_efficiency_evidence.py  (+22 more)
(+10524 files in other folders)
