[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textgrad-rl-mle"
version = "0.1.0"
description = "Offline TextGrad-RL research prototype for frozen small-language-model ML-engineering agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TextGrad-RL Prototype" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pytest>=7.4",
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.7",
]
textarena = [
  "textarena>=0.7",
]
miniwob = [
  "browsergym-miniwob==0.14.3",
]
textworld = [
  "textworld-express==1.1.0",
]

[tool.setuptools.packages.find]
include = ["textgrad_rl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
